# spcs

./: .gitignore
aur/: .SRCINFO
pip/: README.md  setup.cfg  setup.py  spcs.py
